tests/fixtures/type_checker/error/return_expected_explict.galaxy
int return_expected_explict()
{
}
